--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -4,30 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context="com.example.happydiary.Zeyu.CreateActivity">
+    android:id="@+id/mView"
+
+    tools:context="com.example.happydiary.CreateActivity">
 
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarCreate"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/white"
+
 
         app:layout_constraintBottom_toTopOf="@id/toolbar1Create"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <ImageView
+            android:id="@+id/icon_back"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.044"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.023"
+            app:srcCompat="@mipmap/ic_back" />
+
 
         <TextView
             android:id="@+id/createTitle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:fontFamily="cursive"
             android:paddingTop="12dp"
             android:textColor="@color/black"
             android:textSize="20sp"
-            android:fontFamily="cursive"
 
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -54,15 +67,15 @@
 
         <TextView
             android:id="@+id/createLocation"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/toolbarCreate"
             android:layout_centerHorizontal="true"
 
-            android:hint="click button to get location"
-            android:textColorHint="@color/gray"
+            android:hint="click to get location"
             android:paddingTop="12dp"
             android:textColor="@color/black"
+            android:textColorHint="@color/gray"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -75,13 +88,13 @@
         <ImageView
 
             android:id="@+id/buttonLocation"
-            android:layout_width="45dp"
+            android:layout_width="55dp"
             android:layout_height="match_parent"
             android:layout_gravity="bottom|end"
 
-            android:paddingTop="6dp"
-            android:paddingBottom="6dp"
-            android:paddingEnd="6dp"
+            android:paddingTop="10dp"
+            android:paddingEnd="10dp"
+            android:paddingBottom="10dp"
             android:src="@drawable/placeholder"
 
 
@@ -99,7 +112,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/toolbar1Create"
-        android:background="@color/white"
+
+
         android:gravity="top|left"
         android:hint="Enter your note content here"
         android:textColorHint="@color/gray"
