--- a/app/src/main/res/layout/activity_read.xml
+++ b/app/src/main/res/layout/activity_read.xml
@@ -4,27 +4,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context="com.example.happydiary.Zeyu.ReadActivity">
+    android:id="@+id/mView"
+
+    tools:context="com.example.happydiary.ReadActivity">
 
     <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbarRead"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:id="@+id/toolbarRead"
-        android:background="@color/white">
+
+        >
+
+        <ImageView
+            android:id="@+id/icon_back"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.044"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.023"
+            app:srcCompat="@mipmap/ic_back" />
 
 
         <TextView
+            android:id="@+id/titleRead"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingTop="12dp"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:text="Date Displayerd Here"
             android:fontFamily="cursive"
-
+            android:paddingTop="12dp"
+            android:text="Date Displayerd Here"
             android:textColor="@color/black"
-            android:id="@+id/titleRead" />
+
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
     </androidx.appcompat.widget.Toolbar>
 
@@ -48,7 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
-            android:background="@color/white"
+
 
             android:paddingTop="12dp"
             android:textColor="@color/black"
