--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -4,73 +4,79 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:id="@+id/mView"
+    >
 
     <TextView
         android:id="@+id/HappyDiary"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginTop="4dp"
         android:fontFamily="cursive"
+        android:gravity="center_vertical"
         android:text="@string/happy_diary"
+        android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="35dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/input_email"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.499"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.282" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/link_forgotPW"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:text="Forgot password"
         android:textColor="@color/black"
         android:textIsSelectable="false"
         android:textSize="16dp"
         app:layout_constraintBottom_toTopOf="@+id/button_signIn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.048"
+        app:layout_constraintHorizontal_bias="0.058"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/input_password"
-        app:layout_constraintVertical_bias="0.404" />
+        app:layout_constraintVertical_bias="0.051" />
 
     <EditText
         android:id="@+id/input_email"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="14dp"
+        android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="@string/email"
         android:inputType="textPersonName"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         app:backgroundTint="@color/yellow"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/input_password"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.448"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/HappyDiary"
-        app:layout_constraintVertical_bias="0.083"
+        app:layout_constraintVertical_bias="1.0"
         tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
         android:id="@+id/input_password"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:layout_marginHorizontal="14dp"
+        android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="@string/pasword"
         android:inputType="textPassword"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         app:backgroundTint="@color/yellow"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/link_forgotPW"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/input_email"
-        app:layout_constraintVertical_bias="0.08"
+        app:layout_constraintTop_toBottomOf="@+id/input_email"
         tools:ignore="TouchTargetSizeCheck" />
 
     <Button
@@ -78,27 +84,29 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="14dp"
-        android:text="@string/create_account"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="16dp"
         android:background="@color/dark_yellow"
+        android:text="@string/create_account"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.428"
+        app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button_signIn"
-        app:layout_constraintVertical_bias="0.125" />
+        app:layout_constraintVertical_bias="0.101" />
 
     <Button
         android:id="@+id/button_signIn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="14dp"
-        android:text="@string/sign_in"
+        android:layout_marginTop="20dp"
         android:background="@color/dark_yellow"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/sign_in"
+        app:layout_constraintBottom_toTopOf="@+id/button_createAccountPage"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.428"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/input_password"
-        app:layout_constraintVertical_bias="0.216" />
+        app:layout_constraintTop_toBottomOf="@+id/input_password" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
