--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -2,14 +2,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.happydiary.SecondFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Second Fragment"
-        android:textColor="@color/black"
-        android:gravity="center"/>
+        android:layout_height="match_parent">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycleView2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="392dp"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:srcCompat="@drawable/ic_baseline_add_24"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="15dp"
+        />
+    <TextView
+        android:id="@+id/hinttext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="swipe to refresh the content"
+        android:textSize="15sp"
+        android:textColor="@color/gray"
+        android:layout_gravity="center"
+        android:layout_margin="15dp"
+        />
 
 </FrameLayout>
