--- a/app/src/main/res/layout/list_adapter.xml
+++ b/app/src/main/res/layout/list_adapter.xml
@@ -1,26 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+
+    android:padding="15dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:cardBackgroundColor="@color/white">
+        android:layout_height="wrap_content"
+        android:elevation="5dp"
+        app:cardCornerRadius="5dp"
+        app:cardMaxElevation="5dp"
+        android:id="@+id/notecard">
 
-        <TextView
-            android:id="@+id/itemDate"
-            android:layout_width="300dp"
-            android:layout_height="75dp"
-            android:textColor="@color/black"
-            android:text="TextView" />
-        <TextView
-            android:id="@+id/itemContent"
-            android:layout_width="300dp"
-            android:layout_height="75dp"
-            android:textColor="@color/black"
-            android:text="TextView" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:id="@+id/diary"
+            android:orientation="vertical">
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/dairytitle"
+                    android:paddingTop="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingBottom="10dp"
+                    android:textSize="20sp"
+                    android:textColor="@color/black"
+                    android:layout_weight="1"
+
+                    android:paddingLeft="10dp">
+
+
+
+                </TextView>
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="50dp"
+
+                    android:id="@+id/itemmenu"
+                    android:layout_weight="0"
+                    android:src="@drawable/more"
+                    ></ImageView>
+
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/diarycontent"
+
+                android:paddingBottom="20dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="10dp"
+                android:textSize="15sp"
+                android:textColor="@color/black">
+
+            </TextView>
+
+
+        </LinearLayout>
+
+
+
+
     </androidx.cardview.widget.CardView>
-</LinearLayout>
+
+
+</RelativeLayout>
